--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,9 +1,9 @@
-@import 'base/fonts.scss';
-@import 'base/reset.scss';
-@import 'modules/variables.scss';
-@import 'modules/mixins.scss';
-@import 'modules/private.scss';
-@import 'main/index-styles.scss';
-@import 'main/printers-styles.scss';
-@import 'main/programs-styles.scss';
-@import 'main/sps-programs-styles.scss';
+@use 'base/fonts.scss';
+@use 'modules/variables.scss';
+@use 'modules/mixins.scss';
+@use 'modules/private.scss';
+@use 'main/index-styles.scss';
+@use 'main/printers-styles.scss';
+@use 'main/programs-styles.scss';
+@use 'main/iso-style.scss';
+@use 'main/instruction-styles.scss';
