--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,4 +6,4 @@
 @use 'main/printers-styles.scss';
 @use 'main/programs-styles.scss';
 @use 'main/iso-style.scss';
-@use 'main/instruction-styles.scss';
+@use 'main/sps-files-styles.scss';
