--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
   font-style: normal;
   font-display: swap;
 }
-.index-body {
+.body {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -23,7 +23,7 @@
   justify-content: space-between;
   padding: 0 5px;
 }
-.index-body .index-header {
+.body .index-header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -33,13 +33,13 @@
   padding-top: 5px;
   background-color: lightgray;
 }
-.index-body .index-header .header-box {
+.body .index-header .header-box {
   display: flex;
   justify-content: space-around;
   width: 100%;
   height: 95%;
 }
-.index-body .index-header .header-box .cat-1 {
+.body .index-header .header-box .cat-1 {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -47,15 +47,15 @@
   width: 140px;
   height: 95%;
 }
-.index-body .index-header .header-box .cat-1 .cat-img {
+.body .index-header .header-box .cat-1 .cat-img {
   width: 80px;
   height: 80px;
 }
-.index-body .index-header .search {
+.body .index-header .search {
   width: 20%;
   height: 25px;
 }
-.index-body .main-box {
+.body .main-box {
   width: 95%;
   height: 70%;
   display: flex;
@@ -63,36 +63,37 @@
   align-items: center;
   justify-content: center;
 }
-.index-body .main-box .form-container {
+.body .main-box .form-container {
   background: white;
   padding: 2rem;
   border: 2px solid black;
   width: 35%;
 }
-.index-body .main-box form {
+.body .main-box .form-container .form {
   display: flex;
   flex-direction: column;
 }
-.index-body .main-box form input, .index-body .main-box form textarea {
+.body .main-box .form-container .form input, .body .main-box .form-container .form textarea {
   margin-bottom: 1rem;
   padding: 0.8rem;
   border: 2px solid black;
   font-size: 1rem;
 }
-.index-body .main-box form .text {
+.body .main-box .form-container .form .text {
   height: 150px;
 }
-.index-body .main-box form button {
+.body .main-box .form-container .form button {
   padding: 0.8rem;
   border: 2px solid black;
   background: white;
   cursor: pointer;
 }
-.index-body .main-box form button:hover {
+.body .main-box .form-container .form button:hover {
   background: green;
   color: white;
 }
-.index-body .programs-box {
+
+.body .programs-box {
   width: 95%;
   height: 74%;
   display: flex;
@@ -100,7 +101,7 @@
   align-items: center;
   justify-content: flex-start;
 }
-.index-body .programs-box .file-box {
+.body .programs-box .file-box {
   width: 80%;
   height: 50px;
   display: flex;
@@ -108,9 +109,9 @@
   margin-top: 10px;
   border: 1px solid black;
 }
-.index-body .programs-box .file-box .file-box1,
-.index-body .programs-box .file-box .file-box2,
-.index-body .programs-box .file-box .file-box3 {
+.body .programs-box .file-box .file-box1,
+.body .programs-box .file-box .file-box2,
+.body .programs-box .file-box .file-box3 {
   width: 10%;
   height: 100%;
   display: flex;
@@ -118,17 +119,20 @@
   justify-content: center;
   border: 1px solid black;
 }
-.index-body .programs-box .file-box .file-box1 .file-img,
-.index-body .programs-box .file-box .file-box2 .file-img,
-.index-body .programs-box .file-box .file-box3 .file-img {
+.body .programs-box .file-box .file-box1 .file-img,
+.body .programs-box .file-box .file-box2 .file-img,
+.body .programs-box .file-box .file-box3 .file-img {
   width: 40px;
   height: 40px;
 }
-.index-body .programs-box .file-box .file-box2 {
+.body .programs-box .file-box .file-box2 {
   width: 40%;
   height: 100%;
 }
-.index-body .programs-box .file-box .file-box3 {
+.body .programs-box .file-box .file-box3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
   width: 50%;
   height: 100%;
 }
