--- a/scss/main/index-styles.scss
+++ b/scss/main/index-styles.scss
@@ -1,4 +1,4 @@
-.index-body {
+.body {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -50,67 +50,29 @@
             padding: 2rem;
             border: 2px solid black;
             width: 35%;
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-            input, textarea {
-                margin-bottom: 1rem;
-                padding: 0.8rem;
-                border: 2px solid black;
-                font-size: 1rem;
-            }
-            .text {
-                height: 150px;
-            }
-            button {
-                padding: 0.8rem;
-                border: 2px solid black;
-                background: white;
-                cursor: pointer;
-
-                &:hover {
-                background: green;
-                color: white;
-                }
-            }
-        }
-    }
-    .programs-box {
-        width: 95%;
-        height: 74%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        .file-box {
-            width: 80%;
-            height: 50px;
-            display: flex;
-            align-items: center;
-            margin-top: 10px;
-            border: 1px solid black;
-            .file-box1,
-            .file-box2,
-            .file-box3 {
-                width: 10%;
-                height: 100%;
+            .form {
                 display: flex;
-                align-items: center;
-                justify-content: center;
-             border: 1px solid black;
-                .file-img {
-                     width: 40px;
-                     height: 40px; 
+                flex-direction: column;
+                input, textarea {
+                    margin-bottom: 1rem;
+                    padding: 0.8rem;
+                    border: 2px solid black;
+                    font-size: 1rem;
                 }
-            }
-            .file-box2 {
-            width: 40%;
-            height: 100%;
-            }
-            .file-box3 {
-                width: 50%;
-                height: 100%;
+                .text {
+                    height: 150px;
+                }
+                button {
+                    padding: 0.8rem;
+                    border: 2px solid black;
+                    background: white;
+                    cursor: pointer;
+
+                    &:hover {
+                    background: green;
+                    color: white;
+                    }
+                }
             }
         }
     }
