--- a/scss/main/index-styles.scss
+++ b/scss/main/index-styles.scss
@@ -36,6 +36,7 @@
         .search {
             width: 20%;
             height: 25px;
+            margin-bottom: 10px;
         }
     }
     .main-box {
