--- a/scss/main/printers-styles.scss
+++ b/scss/main/printers-styles.scss
@@ -21,12 +21,15 @@
         .samsung-box,
         .epson-box,
         .xerox-box,
-        .other-printers-box {
+        .others-box {
             width: 100%;
             display: none;
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
+            &.active {
+                display: flex;
+            }
             .driver-box {
                 width: 80%;
                 height: 50px;
@@ -42,10 +45,11 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                border: 1px solid black;
+                    border: 1px solid black;
                     .file-img {
                         width: 40px;
-                        height: 40px; 
+                        height: 40px;                         
+                        border-radius: 50%;
                     }
                 }
                 .driver-box2 {
@@ -68,15 +72,6 @@
                     }
                 }
             }
-        }
-        .hp-box.active,
-        .canon-box.active,
-        .kyosera-box.active,
-        .samsung-box.active,
-        .epson-box.active,
-        .xerox-box.active,
-        .other-printers-box.active {
-            display: flex;
         }
     }
 }
