--- a/scss/main/index-styles.scss
+++ b/scss/main/index-styles.scss
@@ -31,6 +31,14 @@
                     width: 80px;
                     height: 80px;
                 }
+                h3 {
+                    text-align: center;
+                    color: black;
+                    font-weight: bold;
+                    &.active {
+                        background-color: green;
+                    }
+                }
             }
         }
         .search {
