--- a/css/styles.css
+++ b/css/styles.css
@@ -24,22 +24,28 @@
   padding: 0 5px;
 }
 .body .index-header {
+  width: 99%;
+  height: 25%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 95%;
-  height: 25%;
   padding-top: 5px;
   background-color: lightgray;
 }
 .body .index-header .header-box {
+  width: 100%;
+  height: 80%;
   display: flex;
   justify-content: space-around;
-  width: 100%;
-  height: 95%;
+  align-items: center;
 }
-.body .index-header .header-box .cat-1 {
+.body .index-header .header-box a {
+  width: 130px;
+  height: 130px;
+  display: flex;
+}
+.body .index-header .header-box a .cat-1 {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -47,21 +53,21 @@
   width: 140px;
   height: 95%;
 }
-.body .index-header .header-box .cat-1 .cat-img {
+.body .index-header .header-box a .cat-1 .cat-img {
   width: 80px;
   height: 80px;
 }
-.body .index-header .header-box .cat-1 h3 {
+.body .index-header .header-box a .cat-1 h3 {
   text-align: center;
   color: black;
   font-weight: bold;
 }
-.body .index-header .header-box .cat-1 h3.active {
+.body .index-header .header-box a .cat-1 h3.active {
   background-color: green;
 }
 .body .index-header .search {
   width: 20%;
-  height: 25px;
+  height: 20px;
   margin-bottom: 10px;
 }
 .body .main-box {
@@ -102,9 +108,82 @@
   color: white;
 }
 
-.body .printer-box {
+.body .index-header a {
+  width: 20%;
+  height: 25px;
+  margin-bottom: 10px;
+}
+.body .index-header a button {
+  width: 100%;
+  height: 100%;
+}
+.body .programs-box {
   width: 95%;
-  height: 14%;
+  height: 74%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+.body .programs-box .file-box {
+  width: 80%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+  border: 1px solid black;
+}
+.body .programs-box .file-box .file-box1,
+.body .programs-box .file-box .file-box2,
+.body .programs-box .file-box .file-box3 {
+  width: 10%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+}
+.body .programs-box .file-box .file-box1 .file-img,
+.body .programs-box .file-box .file-box2 .file-img,
+.body .programs-box .file-box .file-box3 .file-img {
+  width: 40px;
+  height: 40px;
+}
+.body .programs-box .file-box .file-box2 {
+  width: 40%;
+  height: 100%;
+}
+.body .programs-box .file-box .file-box2 .sort-p {
+  width: 92%;
+  text-align: center;
+}
+.body .programs-box .file-box .file-box2 button {
+  width: 8%;
+  cursor: pointer;
+  font-family: inherit;
+}
+.body .programs-box .file-box .file-box2 button:hover {
+  background-color: green;
+  color: white;
+}
+.body .programs-box .file-box .file-box3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 50%;
+  height: 100%;
+}
+.body .programs-box .file-box .file-box3 a button:hover {
+  background: green;
+  color: white;
+}
+.body .programs-box .sort-bar {
+  margin-top: 30px;
+}
+
+.body .printer-box {
+  width: 99%;
+  height: 15%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -116,7 +195,7 @@
   border-radius: 50px;
 }
 .body .printer-list {
-  height: 58%;
+  height: 60%;
 }
 .body .printer-list .hp-box,
 .body .printer-list .canon-box,
@@ -237,72 +316,6 @@
 .body .printer-list .epson-box .driver-box .driver-box3 a button:hover,
 .body .printer-list .xerox-box .driver-box .driver-box3 a button:hover,
 .body .printer-list .others-box .driver-box .driver-box3 a button:hover {
-  background: green;
-  color: white;
-}
-
-.body .index-header a {
-  width: 20%;
-  height: 25px;
-  margin-bottom: 10px;
-}
-.body .programs-box {
-  width: 95%;
-  height: 74%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-}
-.body .programs-box .file-box {
-  width: 80%;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  margin-top: 5px;
-  border: 1px solid black;
-}
-.body .programs-box .file-box .file-box1,
-.body .programs-box .file-box .file-box2,
-.body .programs-box .file-box .file-box3 {
-  width: 10%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-}
-.body .programs-box .file-box .file-box1 .file-img,
-.body .programs-box .file-box .file-box2 .file-img,
-.body .programs-box .file-box .file-box3 .file-img {
-  width: 40px;
-  height: 40px;
-}
-.body .programs-box .file-box .file-box2 {
-  width: 40%;
-  height: 100%;
-}
-.body .programs-box .file-box .file-box2 .sort-p {
-  width: 92%;
-  text-align: center;
-}
-.body .programs-box .file-box .file-box2 button {
-  width: 8%;
-  cursor: pointer;
-  font-family: inherit;
-}
-.body .programs-box .file-box .file-box2 button:hover {
-  background-color: green;
-  color: white;
-}
-.body .programs-box .file-box .file-box3 {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 50%;
-  height: 100%;
-}
-.body .programs-box .file-box .file-box3 a button:hover {
   background: green;
   color: white;
 }
