--- a/scss/main/index-styles.scss
+++ b/scss/main/index-styles.scss
@@ -7,43 +7,50 @@
     justify-content: space-between;
     padding: 0 5px;
     .index-header {
+        width: 99%;
+        height: 25%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        width: 95%;
-        height: 25%;
         padding-top: 5px;
         background-color: lightgray;
         .header-box {
+            width: 100%;
+            height: 80%;
             display: flex;
             justify-content: space-around;
-            width: 100%;
-            height: 95%;
-            .cat-1 {
+            align-items: center;
+            a {
+                width: 130px;
+                height: 130px;
                 display: flex;
-                flex-direction: column;
-                justify-content: space-evenly;
-                align-items: center;
-                width: 140px;
-                height: 95%;
-                .cat-img {
-                    width: 80px;
-                    height: 80px;
-                }
-                h3 {
-                    text-align: center;
-                    color: black;
-                    font-weight: bold;
-                    &.active {
-                        background-color: green;
+
+                .cat-1 {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    align-items: center;
+                    width: 140px;
+                    height: 95%;
+                    .cat-img {
+                        width: 80px;
+                        height: 80px;
+                    }
+                    h3 {
+                        text-align: center;
+                        color: black;
+                        font-weight: bold;
+                        &.active {
+                            background-color: green;
+                        }
                     }
                 }
             }
         }
         .search {
             width: 20%;
-            height: 25px;
+            height: 20px;
             margin-bottom: 10px;
         }
     }
