--- a/css/styles.css
+++ b/css/styles.css
@@ -71,41 +71,15 @@
   margin-bottom: 10px;
 }
 .body .main-box {
-  width: 95%;
+  width: 99%;
   height: 70%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-.body .main-box .form-container {
-  background: white;
-  padding: 2rem;
-  border: 2px solid black;
-  width: 35%;
-}
-.body .main-box .form-container .form {
-  display: flex;
-  flex-direction: column;
-}
-.body .main-box .form-container .form input, .body .main-box .form-container .form textarea {
-  margin-bottom: 1rem;
-  padding: 0.8rem;
-  border: 2px solid black;
-  font-size: 1rem;
-}
-.body .main-box .form-container .form .text {
-  height: 150px;
-}
-.body .main-box .form-container .form button {
-  padding: 0.8rem;
-  border: 2px solid black;
-  background: white;
-  cursor: pointer;
-}
-.body .main-box .form-container .form button:hover {
-  background: green;
-  color: white;
+  background-image: url("../../images/install.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .body .index-header a {
@@ -118,7 +92,7 @@
   height: 100%;
 }
 .body .programs-box {
-  width: 95%;
+  width: 99%;
   height: 74%;
   display: flex;
   flex-direction: column;
@@ -158,7 +132,7 @@
   text-align: center;
 }
 .body .programs-box .file-box .file-box2 button {
-  width: 8%;
+  width: 35px;
   cursor: pointer;
   font-family: inherit;
 }
