--- a/scss/main/programs-styles.scss
+++ b/scss/main/programs-styles.scss
@@ -11,7 +11,7 @@
         }
     }
     .programs-box {
-        width: 95%;
+        width: 99%;
         height: 74%;
         display: flex;
         flex-direction: column;
@@ -46,7 +46,7 @@
                     text-align: center;
                 }
                 button {
-                    width: 8%;
+                    width: 35px;
                     cursor: pointer;
                     font-family: inherit;
                     &:hover {
