--- a/css/styles.css
+++ b/css/styles.css
@@ -293,3 +293,34 @@
   background: green;
   color: white;
 }
+
+body .instruction {
+  width: 99%;
+  height: 74%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+body .instruction .instruction-box {
+  width: 40%;
+  height: 200px;
+  margin: 20px;
+  display: flex;
+  border-radius: 20px;
+  border-style: double;
+}
+body .instruction .instruction-box .instruction-file {
+  width: 40%;
+  height: 200px;
+  border-radius: 20px;
+  background-color: green;
+}
+body .instruction .instruction-box .instruction-title {
+  width: 60%;
+  height: 100%;
+  border-radius: 20px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
